# agentic_hr

./: .env.example  docker-compose.yaml  types.ts
data/mongo/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0-11113211420425943006.wt  collection-2-11113211420425943006.wt  collection-4-11113211420425943006.wt  index-1-11113211420425943006.wt  sizeStorer.wt  (+3 more)
services/interview_ai/backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
services/interview_ai/backend/logs/: eval_crew.log.txt  flow_manager_crew.log.txt  qa_crew.log.txt  welcome_crew.log.txt
services/interview_ai/backend/src/api/: README.md  config.py  dependencies.py  endpoints.py  main.py  schemas.py  utils.py
services/interview_ai/backend/src/api/core/: __init__.py  config.py
services/interview_ai/backend/src/api/db/: dependencies.py
services/interview_ai/backend/src/api/models/: enums.py  schemas.py
services/interview_ai/backend/src/api/routes/interview/: __init__.py  chat.py  scheduling.py  sessions.py
services/interview_ai/backend/src/api/services/: email.py
services/interview_ai/backend/src/interview_ai/: __init__.py  main.py  response.py  utils.py
services/interview_ai/backend/src/interview_ai/crews/: __init__.py  evaluator_crew.py  interview_flow_manager_crew.py  interview_qa_crew.py  introduction_crew.py
services/interview_ai/backend/src/interview_ai/crews/config/: eval_agents.yaml  eval_tasks.yaml  flow_agents.yaml  flow_tasks.yaml  intro_agents.yaml  intro_tasks.yaml  qa_agents.yaml  qa_tasks.yaml
services/interview_ai/backend/tests/: test_routes.py
(+161 files in other folders)
