[project]
name = "interview_ai"
version = "0.1.0"
description = "interview-ai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0",
    "json5 (>=0.10.0,<0.11.0)",
    "fastapi[standard] (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "motor (>=3.7.0,<4.0.0)",
    "aioredis (>=2.0.1,<3.0.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "pymongo (>=4.11.1,<5.0.0)",
    "redis (>=5.2.1,<6.0.0)"
]

[tool.poetry]
name = "AI Interviewer"
version = "1.0.0"
description = "AI Interviewer Microservice for Kifya Agentic HR Automation"
authors = ["Abdulmunim Jemal <abdulmunimjemal@gmail.com>"]
